exports[`test renders disabled if errors from props 1`] = `
<Form id="forgot-password" fieldsetTheme="flush soft-top" classes={{...}} submit={[Function]}>
<legend className="push-half-bottom">
Reset Password
</legend>
<h6 className="push-double-bottom">
confirm your email to send the reset link
</h6>
<Input name="email" placeholder="user@email.com" label="Email" errorText="Email does not exist" validation={[Function]} defaultValue="test@test.com" />
<div>
<a onClick={[Function]} tabIndex={-1} className="btn--small btn--dark-tertiary display-inline-block">
Back
</a>
<button className="push-left btn--disabled" type="submit">
Enter
</button>
</div>
</Form>
`;

exports[`test renders error version 1`] = `<Err msg="Looks like there was a problem" error="error message" />`;

exports[`test renders loading version 1`] = `<Loading msg="Sending email to reset your password..." />`;

exports[`test renders success version 1`] = `<Success msg="An email has been sent to test@test.com with instructions on how to reset your password!" />`;

exports[`test renders with props 1`] = `
<Form id="forgot-password" fieldsetTheme="flush soft-top" classes={{...}} submit={[Function]}>
<legend className="push-half-bottom">
Reset Password
</legend>
<h6 className="push-double-bottom">
confirm your email to send the reset link
</h6>
<Input name="email" placeholder="user@email.com" label="Email" errorText="Email does not exist" validation={[Function]} defaultValue="test@test.com" />
<div>
<a onClick={[Function]} tabIndex={-1} className="btn--small btn--dark-tertiary display-inline-block">
Back
</a>
<button className="push-left btn" type="submit">
Enter
</button>
</div>
</Form>
`;
